--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -310,6 +310,8 @@ librgw_a_SOURCES =  \
 	rgw/rgw_acl.cc \
 	rgw/rgw_acl_s3.cc \
 	rgw/rgw_acl_swift.cc \
+	rgw/rgw_client_io.cc \
+	rgw/rgw_fcgi.cc \
 	rgw/rgw_xml.cc \
 	rgw/rgw_user.cc \
 	rgw/rgw_tools.cc \
@@ -1695,6 +1697,8 @@ noinst_HEADERS = \
 	rgw/rgw_acl.h\
 	rgw/rgw_acl_s3.h\
 	rgw/rgw_acl_swift.h\
+	rgw/rgw_client_io.h\
+	rgw/rgw_fcgi.h\
 	rgw/rgw_xml.h\
 	rgw/rgw_cache.h\
 	rgw/rgw_common.h\
