rgw: add rest-usage handler
Signed-off-by: Yehuda Sadeh <yehuda@inktank.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -338,6 +338,7 @@ radosgw_SOURCES = \
         rgw/rgw_rest.cc \
         rgw/rgw_rest_swift.cc \
         rgw/rgw_rest_s3.cc \
+        rgw/rgw_rest_usage.cc \
         rgw/rgw_swift.cc \
 	rgw/rgw_swift_auth.cc \
 	rgw/rgw_main.cc
@@ -1716,6 +1717,8 @@ noinst_HEADERS = \
 	rgw/rgw_rest.h\
 	rgw/rgw_rest_swift.h\
 	rgw/rgw_rest_s3.h\
+	rgw/rgw_rest_admin.h\
+	rgw/rgw_rest_usage.h\
 	rgw/rgw_tools.h\
 	rgw/rgw_usage.h\
 	rgw/rgw_user.h\
