rgw: Create JSON parser
Create JSON object and parser classes similar to the XMLObj and
RGWXMLParser based on JSON Spirit.

Signed-off-by: caleb miles <caleb.miles@inktank.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -151,7 +151,7 @@ base: ceph-mon ceph-osd ceph-mds \
 	ceph cephfs \
 	ceph-syn \
 	rados radosgw librados-config \
-	ceph-conf monmaptool osdmaptool crushtool ceph-authtool \
+	ceph-conf monmaptool osdmaptool crushtool jsontest ceph-authtool \
 	init-ceph mkcephfs
 
 
@@ -316,6 +316,7 @@ librgw_a_SOURCES =  \
 	rgw/rgw_fcgi.cc \
 	rgw/rgw_xml.cc \
 	rgw/rgw_usage.cc \
+	rgw/rgw_json.cc \
 	rgw/rgw_user.cc \
 	rgw/rgw_tools.cc \
 	rgw/rgw_rados.cc \
@@ -1748,6 +1749,7 @@ noinst_HEADERS = \
 	rgw/rgw_client_io.h\
 	rgw/rgw_fcgi.h\
 	rgw/rgw_xml.h\
+	rgw/rgw_json.h\
 	rgw/rgw_cache.h\
 	rgw/rgw_common.h\
 	rgw/rgw_formats.h\
