message: add MRecoveryReserve
This message will be used to reserve and release recovery slots on
replica PGs.

Signed-off-by: Mike Ryan <mike.ryan@inktank.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1663,6 +1663,7 @@ noinst_HEADERS = \
         messages/MOSDPGRemove.h\
 	messages/MOSDPGScan.h\
         messages/MBackfillReserve.h\
+        messages/MRecoveryReserve.h\
         messages/MOSDPGTemp.h\
         messages/MOSDPGTrim.h\
         messages/MOSDPing.h\
