rgw: handle policy as case insensitive where required
Signed-off-by: Yehuda Sadeh <yehuda@inktank.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1758,6 +1758,7 @@ noinst_HEADERS = \
 	rgw/rgw_json.h\
 	rgw/rgw_cache.h\
 	rgw/rgw_common.h\
+	rgw/rgw_string.h\
 	rgw/rgw_formats.h\
 	rgw/rgw_html_errors.h\
 	rgw/rgw_log.h\
