--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1134,6 +1134,7 @@ libcommon_files = \
 	common/PrebufferedStreambuf.cc \
 	common/BackTrace.cc \
 	common/perf_counters.cc \
+	common/Mutex.cc \
 	common/admin_socket.cc \
 	common/admin_socket_client.cc \
 	common/escape.c \
